--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,422</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,832</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">MyTestCases.SignUp</td><td><a href="#m0">MyFirstTest</a></td><td rowspan="1">1706532806184</td><td rowspan="1">11230</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">MyTestCases.SignUp</td><td><a href="#m0">AddOneRandomItem</a></td><td rowspan="1">1706629153846</td><td rowspan="1">5772</td></tr><tr class="passedeven"><td><a href="#m1">FooterTag</a></td><td rowspan="1">1706629153806</td><td rowspan="1">38</td></tr><tr class="passedeven"><td><a href="#m2">LogIn</a></td><td rowspan="1">1706629148318</td><td rowspan="1">5482</td></tr><tr class="passedeven"><td><a href="#m3">LogOut</a></td><td rowspan="1">1706629146929</td><td rowspan="1">1386</td></tr><tr class="passedeven"><td><a href="#m4">MyFirstTes</a></td><td rowspan="1">1706629137987</td><td rowspan="1">8933</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">MyTestCases.SignUp#MyFirstTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">MyTestCases.SignUp#AddOneRandomItem</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">MyTestCases.SignUp#FooterTag</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">MyTestCases.SignUp#LogIn</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">MyTestCases.SignUp#LogOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">MyTestCases.SignUp#MyFirstTes</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
