--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--179691767\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-1023128169\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases.SignUp" class="method navigator-link" hash-for-method="MyFirstTest">MyFirstTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases.SignUp" class="method navigator-link" hash-for-method="AddOneRandomItem">AddOneRandomItem</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases.SignUp" class="method navigator-link" hash-for-method="FooterTag">FooterTag</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases.SignUp" class="method navigator-link" hash-for-method="LogIn">LogIn</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases.SignUp" class="method navigator-link" hash-for-method="LogOut">LogOut</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestCases.SignUp" class="method navigator-link" hash-for-method="MyFirstTes">MyFirstTes</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +147,37 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="MyFirstTest">
-                  </a> <!-- MyFirstTest -->
-                  <span class="method-name">MyFirstTest</span>
+                  <a name="AddOneRandomItem">
+                  </a> <!-- AddOneRandomItem -->
+                  <span class="method-name">AddOneRandomItem</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="FooterTag">
+                  </a> <!-- FooterTag -->
+                  <span class="method-name">FooterTag</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LogIn">
+                  </a> <!-- LogIn -->
+                  <span class="method-name">LogIn</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LogOut">
+                  </a> <!-- LogOut -->
+                  <span class="method-name">LogOut</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="MyFirstTes">
+                  </a> <!-- MyFirstTes -->
+                  <span class="method-name">MyFirstTes</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--179691767\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-1023128169\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +234,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'MyFirstTest')
+data.setCell(0, 1, 'MyFirstTes')
 data.setCell(0, 2, 'MyTestCases.SignUp')
-data.setCell(0, 3, 11230);
+data.setCell(0, 3, 8933);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'AddOneRandomItem')
+data.setCell(1, 2, 'MyTestCases.SignUp')
+data.setCell(1, 3, 5772);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'LogIn')
+data.setCell(2, 2, 'MyTestCases.SignUp')
+data.setCell(2, 3, 5482);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'LogOut')
+data.setCell(3, 2, 'MyTestCases.SignUp')
+data.setCell(3, 3, 1386);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'FooterTag')
+data.setCell(4, 2, 'MyTestCases.SignUp')
+data.setCell(4, 3, 38);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,8 +291,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">MyFirstTest</span>
-                <span class="method-start">183 ms</span>
+                <span class="method-name">MyFirstTes</span>
+                <span class="method-start">190 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LogOut</span>
+                <span class="method-start">9132 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LogIn</span>
+                <span class="method-start">10521 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">FooterTag</span>
+                <span class="method-start">16009 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">AddOneRandomItem</span>
+                <span class="method-start">16049 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
