--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaae78">  <td>24/01/29 15:53:26</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SignUp.MySetup()[pri:0, instance:MyTestCases.SignUp@1e1d3956]">&gt;&gt;MySetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593768538</td>   <td></td> </tr>
-<tr bgcolor="aaae78">  <td>24/01/29 15:53:26</td>   <td>180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUp.MyFirstTest()[pri:0, instance:MyTestCases.SignUp@1e1d3956]">MyFirstTest</td> 
-  <td>main@593768538</td>   <td></td> </tr>
+<tr bgcolor="aaae78">  <td>24/01/30 18:39:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUp.LogIn()[pri:3, instance:MyTestCases.SignUp@24d4d7c9]">LogIn</td> 
+  <td>main@475394679</td>   <td></td> </tr>
+<tr bgcolor="aaae78">  <td>24/01/30 18:38:57</td>   <td>-10331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUp.MyFirstTes()[pri:1, instance:MyTestCases.SignUp@24d4d7c9]">MyFirstTes</td> 
+  <td>main@475394679</td>   <td></td> </tr>
+<tr bgcolor="aaae78">  <td>24/01/30 18:39:13</td>   <td>5528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUp.AddOneRandomItem()[pri:5, instance:MyTestCases.SignUp@24d4d7c9]">AddOneRandomItem</td> 
+  <td>main@475394679</td>   <td></td> </tr>
+<tr bgcolor="aaae78">  <td>24/01/30 18:39:06</td>   <td>-1389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUp.LogOut()[pri:2, instance:MyTestCases.SignUp@24d4d7c9]">LogOut</td> 
+  <td>main@475394679</td>   <td></td> </tr>
+<tr bgcolor="aaae78">  <td>24/01/30 18:38:57</td>   <td>-10516</td> <td>&nbsp;</td><td title="&gt;&gt;SignUp.MySetup()[pri:0, instance:MyTestCases.SignUp@24d4d7c9]">&gt;&gt;MySetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@475394679</td>   <td></td> </tr>
+<tr bgcolor="aaae78">  <td>24/01/30 18:39:13</td>   <td>5488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUp.FooterTag()[pri:4, instance:MyTestCases.SignUp@24d4d7c9]">FooterTag</td> 
+  <td>main@475394679</td>   <td></td> </tr>
 </table>
